fixed header wrapping (#20443)

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
@@ -24,8 +24,9 @@
     border-radius: 12px;
     border: 0.5px solid @grey-300;
     padding: 20px;
-    gap: 28px;
+    gap: 16px;
     background-color: @background-color;
+    justify-content: space-evenly;
   }
   .ant-space-item {
     .entity-no-tier {
@@ -83,7 +84,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 148px;
+    max-width: 148px;
   }
 
   .ant-btn-group {
@@ -131,6 +132,6 @@
   }
   .tier-container,
   .extra-info-container {
-    width: 148px;
+    max-width: 148px;
   }
 }
