--- a/openmetadata-ui/src/main/resources/ui/src/components/Database/RetentionPeriod/retention-period.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Database/RetentionPeriod/retention-period.less
@@ -12,8 +12,11 @@
  */
 @import url('../../../styles/variables.less');
 
-.ant-btn-icon-only.edit-retention-period-button {
+.ant-btn-icon-only.remove-button-default-styling.edit-retention-period-button {
   border: 1px solid @border-light;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
 }
 
 span.extra-info-label-heading {
@@ -22,5 +25,5 @@ span.extra-info-label-heading {
 }
 
 .retention-period-container {
-  width: 148px;
+  max-width: 148px;
 }
