--- a/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
@@ -21,6 +21,6 @@
 }
 .data-assets-header-container {
   .domain-link-container {
-    width: 148px;
+    max-width: 148px;
   }
 }
